--- a/config/install/layout_builder_styles.style.block_p_64.yml
+++ b/config/install/layout_builder_styles.style.block_p_64.yml
@@ -1,11 +1,11 @@
 langcode: en
 status: true
 dependencies: {  }
-id: p_12
-label: p-12
-classes: p-12
-type: section
+id: block_p_64
+label: p-64
+classes: p-64
+type: component
 group: padding
-weight: 0
 block_restrictions: {  }
 layout_restrictions: {  }
+weight: 0
