--- a/config/install/layout_builder_styles.style.block_p_4.yml
+++ b/config/install/layout_builder_styles.style.block_p_4.yml
@@ -1,11 +1,11 @@
 langcode: en
 status: true
 dependencies: {  }
-id: p_8
-label: p-8
-classes: p-8
-type: section
+id: block_p_4
+label: p-4
+classes: p-4
+type: component
 group: padding
-weight: 0
 block_restrictions: {  }
 layout_restrictions: {  }
+weight: 0
