--- a/config/install/layout_builder_styles.style.block_p_64_md.yml
+++ b/config/install/layout_builder_styles.style.block_p_64_md.yml
@@ -1,11 +1,11 @@
 langcode: en
 status: true
 dependencies: {  }
-id: p_16
-label: p-16
-classes: p-16
-type: section
-group: padding
-weight: 0
+id: block_p_64_md
+label: p-64 md
+classes: md:p-64
+type: component
+group: padding_md
 block_restrictions: {  }
 layout_restrictions: {  }
+weight: 0
