--- a/config/install/layout_builder_styles.style.section_p_0_lg.yml
+++ b/config/install/layout_builder_styles.style.section_p_0_lg.yml
@@ -1,11 +1,11 @@
 langcode: en
 status: true
 dependencies: {  }
-id: p_2_block
-label: p-2
-classes: p-2
-type: component
-group: padding
+id: section_p_0_lg
+label: p-0 lg
+classes: lg:p-0
+type: section
+group: padding_lg
 block_restrictions: {  }
 layout_restrictions: {  }
 weight: 0
