--- a/config/install/layout_builder_styles.style.section_p_8_lg.yml
+++ b/config/install/layout_builder_styles.style.section_p_8_lg.yml
@@ -1,11 +1,11 @@
 langcode: en
 status: true
 dependencies: {  }
-id: p_24
-label: p-24
-classes: p-24
+id: section_p_8_lg
+label: p-8 lg
+classes: lg:p-8
 type: section
-group: padding
-weight: 0
+group: padding_lg
 block_restrictions: {  }
 layout_restrictions: {  }
+weight: 0
